+ Changed the project name to match the GitLab one.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ProjetS2</name>
+	<name>M2107-P3.1-EnglishGlossary</name>
 	<comment></comment>
 	<projects>
 	</projects>
