--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/PanelQuiz.java=UTF-8
+encoding//src/PanelTestGenerator.java=UTF-8
 encoding//src/Tabs.java=UTF-8
