Quiz is now in a class quiz

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/core/Quiz.java=UTF-8
 encoding//src/gui/PanelQuiz.java=UTF-8
 encoding//src/gui/PanelTestGenerator.java=UTF-8
 encoding//src/gui/Tabs.java=UTF-8
